fixed css on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ section{
   box-sizing: border-box;
   color: white;
   border: none;
+  vertical-align: top;
 }
 /* left button */
 .lbtn{
